2011-02-04  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_reset_user_password): Fix PINPAD_SUPPORT case
	with reset code.

2011-02-01  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.9.

	* src/openpgp-do.c (extended_capabilities): Change value for card
	holder certificate.

	* src/usb_prop.c (gnuk_device_SetInterface): New.

2011-01-29  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb_prop.c (gnuk_device_Get_Interface_Setting): Handle the
	case where we have multiple interfaces.

2011-01-28  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/gnuk_update_binary.py: New.

	* src/openpgp-do.c (gpg_do_get_data): Fix length adding two for
	status word at the end and adding four for the tag and the length.

	* src/usb-icc.c (icc_handle_data): Fix decrementing res_APDU_size.
	(icc_power_off): Status should be the one *after* power off.

	* src/openpgp.c (cmd_update_binary): Fix return code.

2011-01-27  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-icc.c (res_APDU_pointer): New.
	(icc_handle_data, USBthread): Handle res_APDU_pointer.

	* src/openpgp.h (GPG_COMMAND_NOT_ALLOWED): New.

	* src/openpgp.c (INS_UPDATE_BINARY, FILE_EF_CH_CERTIFICATE)
	(FILE_EF_RANDOM, cmd_update_binary): New.
	(process_command_apdu): Initialize res_APDU_pointer.

	* src/openpgp-do.c (gpg_do_get_data): Handle GPG_DO_CH_CERTIFICATE.

	* src/gnuk.ld.in (.gnuk_ch_certificate): New.

	* src/flash.c (flash_check_blank, flash_erase_binary)
	(flash_write_binary): New.

	* src/openpgp-do.c (gpg_do_table): Exclude GPG_DO_CH_CERTIFICATE.

	* src/openpgp.c (cmd_reset_user_password): Add PINPAD_SUPPORT.

	* src/gnuk.ld.in: Fix alignment and filling.

2011-01-26  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/STBEE/mcuconf.h: New.
	* boards/STBEE/board.mk: New.
	* boards/STBEE/board.h: New.
	* boards/STBEE/board.c: New.

	* tool/dfuse.py (DFU_STM32.verify): Add double ll_clear_status.

	* src/configure (target): Add STBEE.

2011-01-25  NIIBE Yutaka  <gniibe@fsij.org>
