@@ -36,7 +36,7 @@ extern void *memmove(void *dest, const void *src, size_t n);
 extern int icc_data_size;
 #define cmd_APDU_size icc_data_size
 extern int res_APDU_size;
-extern uint8_t *res_APDU_pointer;
+extern const uint8_t *res_APDU_pointer;
 
 /* USB buffer size of LL (Low-level): size of single Bulk transaction */
 #define USB_LL_BUF_SIZE 64
@@ -123,6 +123,7 @@ extern int flash_write_binary (uint8_t file_id, const uint8_t *data, uint16_t le
 
 /* Linker set this symbol */
 extern uint8_t ch_certificate_start;
+extern uint8_t random_bits_start;
 
 #define KEY_MAGIC_LEN 8
 #define KEY_CONTENT_LEN 256	/* p and q */
